<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyBasket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#fc9332"
        android:layout_weight="2">
        <Button
            android:id="@+id/go_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dip"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:fontFamily="@font/brandon_grotesque"
            android:background="@drawable/rounded_corners"
            android:drawableStart="@drawable/ic_vector"
            android:textAllCaps="false"
            android:text="@string/goback" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mybasket"
            android:fontFamily="@font/brandon_grotesque"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="7"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:elevation="0dp"
            android:layout_marginBottom="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:elevation="0dp"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2"
                    android:background="#fffaeb">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/product_description"
                        android:src="@drawable/breakfast_quinoa_and_red_fruit" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:paddingStart="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_grotesque_bld"
                        android:text="@string/product1"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_grotesque"
                        android:text="@string/product_count"
                        android:textSize="16sp" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_centerInParent="true"
                        android:drawableStart="@drawable/currency_vector"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/brandon_grotesque"
                        android:text="@string/price1"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#F4F4F4"
            android:layout_marginBottom="5dp"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom"
            android:elevation="0dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:background="#FFFFFF"
                android:elevation="0dp"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2"
                    android:background="#F1EFF6"
                    android:clipToPadding="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/product_description"
                        android:src="@drawable/berryworld" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:paddingStart="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_grotesque_bld"
                        android:text="@string/product2"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_grotesque"
                        android:text="@string/product_count"
                        android:textSize="16sp" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="15dp"
                        android:drawableStart="@drawable/currency_vector"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/brandon_grotesque"
                        android:text="@string/price1"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#F4F4F4"
            android:layout_marginBottom="5dp"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:elevation="0dp"
            android:layout_marginBottom="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:elevation="0dp"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2"
                    android:background="#FEF0F0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/product_description"
                        android:src="@drawable/tropical_fruit_salad" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    android:paddingStart="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_grotesque_bld"
                        android:text="@string/product3"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandon_grotesque"
                        android:text="@string/product_count"
                        android:textSize="16sp" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableStart="@drawable/currency_vector"
                        android:fontFamily="@font/brandon_grotesque"
                        android:textStyle="bold"
                        android:drawablePadding="5dp"
                        android:text="@string/price1"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="10"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dip"
                android:fontFamily="@font/brandon_grotesque_bld"
                android:text="@string/total"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawableStart="@drawable/currency_vector"
                android:fontFamily="@font/brandon_grotesque_bld"
                android:text="@string/total_cost"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_rounded_corners"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:text="@string/checkout"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>

</LinearLayout>